--- a/graphql-server-example/package.json
+++ b/graphql-server-example/package.json
@@ -5,19 +5,27 @@
   "main": "index.js",
   "scripts": {
     "compile": "tsc",
-    "start": "npm run compile && node ./dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "ts-node-dev --transpile-only --no-notify --exit-child src/index.ts",
+    "generate": "ts-node --transpile-only src/schema.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "module",
   "dependencies": {
-    "@apollo/server": "^4.10.0",
-    "graphql": "^16.8.1"
+    "@prisma/client": "^3.5.0",
+    "apollo-server": "^3.5.0",
+    "bcryptjs": "~2.4.0",
+    "graphql": "^15.7.2",
+    "graphql-scalars": "^1.14.1",
+    "jsonwebtoken": "~8.5.0",
+    "nexus": "^1.1.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "~2.4.0",
+    "@types/jsonwebtoken": "~8.5.0",
     "@types/node": "^20.11.16",
+    "prisma": "^5.9.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
   }
 }
